Fix alignment of choice field when text wraps (#66)
Resolves HDSG-66

--- a/packages/core/src/settings/_variables.forms.scss
+++ b/packages/core/src/settings/_variables.forms.scss
@@ -6,6 +6,7 @@ $choice-checked-background-color: $color-primary !default;
 $choice-border-color: $color-base !default;
 $choice-border-color-inverse: $color-white !default;
 $choice-border-width: 2px !default;
+$choice-size: $spacer-4 !default;
 
 // USWDS overrides...
 // These variables apply to form fields (input, select, textarea, button)
